fixing carousel jump

--- a/styles/_slick.scss
+++ b/styles/_slick.scss
@@ -39,6 +39,12 @@
   transform: translate3d(0, 0, 0);
 }
 
+.carousel_slider {
+  .slick-track {
+    transition: transform 0.5s ease-in-out !important;
+  }
+}
+
 .slick-track {
   position: relative;
   left: 0;
